--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://MYSQL_HOST:localhost:3306/sepm
-spring.datasource.username=sepm
-spring.datasource.password=sepm
-spring.jpa.properties.hiberbate.default_schema=m31
+spring.datasource.url=jdbc:mysql://localhost:3306/sepm
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.properties.hiberbate.default_schema=sepm
 spring.jpa.show-sql=true
+
