--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8080
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sepm
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/m3-1
 spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.properties.hiberbate.default_schema=sepm
+spring.datasource.password=177289
+spring.jpa.properties.hiberbate.default_schema=m3-1
 spring.jpa.show-sql=true
-
