--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
 server.port=8080
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sepm
-spring.datasource.username=root
-spring.datasource.password=177289
-spring.jpa.properties.hiberbate.default_schema=sepm
-spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/sepm
+#spring.datasource.username=root
+#spring.datasource.password=177289
+#spring.jpa.properties.hiberbate.default_schema=sepm
+#spring.jpa.show-sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sepm.m31@gmail.com
+spring.mail.password=Sepmtestm31 
+spring.mail.default-encoding=UTF-8
+
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+
